[package]
name = "cargo-build-tree"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escargot = "0.5.0"
anyhow = "1.0.27"
serde = "1.0.105"
fxhash = "0.2.1"
serde_json = "1.0.48"
codemap-diagnostic = "0.1.1"
annotate-snippets.version = "0.6.1"
annotate-snippets.features = ["ansi_term"]
